tests/ui/higher-ranked/well-formed-aliases.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/well-formed-aliases.rs:5:52
   |
LL | fn test<T>(f: for<'a> fn(<&'a T as Trait>::Gat<&'a [str]>)) where for<'a> &'a T: Trait {}
   |                                                    ^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: slice and array elements must have `Sized` type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
